# tranlater

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  electron.vite.config.ts  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.claude/: settings.json  settings.local.json
.claude/agents/: code-simplifier.md
.claude/commands/: askme.md  cr_branch.md  cr_local.md  explain.md  feedback.md  fixhigh.md  handover.md  markdown_workflow.md  mermaid.md
.claude/hooks/: pre-compact-handover.py
.claude/skills/handover/: SKILL.md
.claude/skills/mr-comments-handler/: SKILL.md
.claude/skills/tech-design-doc/: SKILL.md
.claude/skills/tech-design-doc/scripts/markdown-docx/: Makefile  README.md  pyproject.toml  setup.sh
.claude/skills/tech-design-doc/scripts/markdown-docx/src/md2docx/: __init__.py  cli.py  converter.py  toc_processor.py
.claude/skills/tech-design-doc/templates/: 01-research-summary.md  02-comparison-analysis.md  03-project-analysis.md  04-design-thinking.md  05-design-document.md  README.md
.claude/skills/ts-comment-standards/: SKILL.md
resources/: entitlements.mac.plist
src/main/: index.ts
src/main/handlers/: ipcHandlers.ts
src/main/services/: AudioCaptureService.ts  GoogleSpeechService.ts  TranslationService.ts  WindowManager.ts
src/main/types/: audio.ts  translation.ts
src/main/utils/: errors.ts  permissions.ts
src/preload/: index.ts
src/renderer/: control.html  control.tsx  subtitle.html  subtitle.tsx
src/renderer/src/: env.d.ts
src/shared/types/: index.ts
(+5 files in other folders)
